--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "stage": "react-static build --staging",
     "build": "react-static build",
     "analyze": "react-static build --analyze",
-    "serve": "serve dist -p 3000"
+    "serve": "serve dist -p 3000",
+    "deploy:GH_PAGES": "react-static build && touch dist/.nojekyll && touch dist/CNAME && echo \"gruporottis.com\" >> dist/CNAME && gh-pages -d dist --dotfiles"
   },
   "dependencies": {
     "@reach/router": "^1.2.1",
     "axios": "^0.19.0",
+    "gh-pages": "^3.1.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-static": "^7.2.0",
